# VerseEngine

./: Cargo.toml
src/: main.rs  translation.rs
src/characters/: create_character_sub_command.rs  inventory_subcommand.rs  mod.rs
src/craft/: logic.rs
src/database/: areas.rs  characters.rs  craft.rs  db_client.rs  db_namespace.rs  inventory.rs  items.rs  loot.rs  loot_tables.rs  mod.rs  modifiers.rs  places.rs  recipe.rs  road.rs  server.rs  stats.rs  tool.rs  travel.rs  universe.rs
src/discord/: channels.rs  connect_bot.rs  handler.rs
src/item/: consume_subcommand.rs  create_item_subcommand.rs  delete_subcommand.rs  lookup_subcommand.rs  mod.rs  place_subcommand.rs  populate_test_subcommand.rs  use_subcommand.rs
src/loot/: logic.rs  mod.rs
src/loot_table/: edit_subcommand.rs  mod.rs
src/place/: create_place_sub_command.rs
src/recipe/: craft_stop_subcommand.rs  craft_subcommand.rs  create_subcommand.rs  mod.rs
src/roads/: create_road_sub_command.rs
src/start_command/: handler.rs
src/tip/: support_command.rs
src/travel/: estimate.rs  join.rs  leave.rs  logic.rs  mod.rs  start.rs  stop.rs  travel__sub_command.rs  utils.rs
src/universe/: add_server_sub_command.rs  create_universe_sub_command.rs  time_sub_command.rs
src/universe/setup/: setup_sub_command.rs
src/utility/: carousel.rs  effect_parser.rs  loot_table_parser.rs  mod.rs  recipe_parser.rs  reply.rs
translations/: en-US.ftl  fr.ftl
