[package]
name = "RpBot_reborn"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = "0.12.5"
poise = "0.6.2"
fluent = "0.17.0"
intl-memoizer = "0.5.3"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
mongodb = "3.5.1"
urlencoding = "2.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.16.1"
lazy_static = "1.5.0"
futures = "0.3.32"
regex = "1.12.3"
fluent-syntax = "0.12.0"
serde_json = "1.0.149"
log = "0.4.29"
once_cell = "1.21.3"
chrono = "0.4.41"
anyhow = "1.0.102"
dotenv = "0.15.0"
reqwest = { version = "0.13.2", features = ["json"] }
uuid = { version = "1.17.0", features = ["v4"] }
rand = "0.10.0"
